tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • ody-logs.log
    • ody-doctor-report.json
    • auto-review-rollout-thread-1.jsonl
    • ody-connectivity-diagnostics.txt

› 1. Yes  Share the current Ody session logs and diagnostics with the team
          for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
